--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,4 @@
-<p> HELLO WORD DOghfhfghhhh </p>
+<p> HELLO WORD  </p>
 
 <link rel="stylesheet" href="{{ 'component-list-menu.css' | asset_url }}" media="print" onload="this.media='all'">
 <link rel="stylesheet" href="{{ 'component-search.css' | asset_url }}" media="print" onload="this.media='all'">
